# urirun

./: .codebase_audit_state.json  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  package-lock.json  package.json  planfile.yaml  project.sh  requirements.txt  tree.txt
.urihandler/: registry.merged.json
.urirun/: scheme-index.json
TODO/: RELEASE_0.4.4.md  connectors.yml  repin_connectors.py
adapters/: new-connector.sh
adapters/python/: CHANGELOG.md  README.md  conftest.py  pyproject.toml
adapters/python/.urirun/: discovered-registry.json
adapters/python/tests/: test_adopt_pack.py  test_agent.py  test_agent_command.py  test_backend_registry.py  test_capability.py  test_cdp_surface.py  test_chat_artifacts.py  test_chat_document_sync_client.py  test_chat_node_default.py  test_chat_scanner_client.py  test_cli_parser.py  test_client.py  test_codegen.py  test_compat.py  test_connect_catalog.py  test_connector_extractable.py  test_connector_handler.py  test_connector_lint.py  test_connector_resolver.py  test_connector_scaffold.py  test_connector_sdk.py  test_contract_enforce_frozen.py  test_contract_jsonschema.py  test_contract_reversible.py  test_contracts.py  test_daemon.py  test_dashboard_api_characterizing.py  test_dashboard_js.py  test_declarative.py  test_diagnostics.py  test_discovery.py  test_dispatch_protocol.py  test_distribution_name_collision.py  test_document_metadata.py  test_document_sync.py  test_domain_monitor.py  test_episode.py  test_episode_capture.py  test_errors.py  test_event_schema.py  (+63 more)
adapters/python/urihandler/: __init__.py  _registry.py  _runtime.py  _scan.py  v4.py  v5.py  v6.py  v7.py  v8.py  v8_adopt.py  v8_grpc.py  v8_mcp.py  v8_service.py
adapters/python/urirun/: __init__.py  _connector.py  _registry.py  _runtime.py  _scan.py  connect_catalog.py  connector_scaffold.py  connector_sdk.py  connector_smoke.py  domain_monitor.py  errors.py  host_dashboard.py  host_db.py  host_integrations.py  mesh.py  namecheap_dns.py  planfile_adapter.py  scheduler.py  task_planner.py  testing.py  v2.py  v7.py  v8.py  v8_adopt.py  v8_grpc.py  v8_mcp.py  v8_service.py
adapters/python/urirun/connectors/: __init__.py  backend_registry.py  connect_catalog.py  connector_lint.py  connector_scaffold.py  connector_smoke.py  declarative.py  openapi_import.py  resolver.py
adapters/python/urirun/connectors/inputs/: __init__.py  uinput.py
adapters/python/urirun/connectors/surfaces/: __init__.py  cdp.py
adapters/python/urirun/host/: __init__.py  _chat_message.py  _dashboard_get_handlers.py  _dashboard_post_handlers.py  _host_port.py  _node_auth.py  _node_builder.py  _orchestrator_offline.py  android_node.py  artifacts_admin.py  capability.py  chat_orchestrator.py  connector_admin.py  contracts.py  dashboard.css  dashboard.html  dashboard.js  dashboard_api.py  dashboard_http.py  decision_loop.py  discovery.py  dispatch.py  document_metadata.py  document_sync.py  document_sync_chat.py  domain_monitor.py  fs_transfer.py  host_dashboard.py  host_db.py  host_integrations.py  html_templates.py  node_api.py  node_cli.py  node_dispatch.py  object_registry.py  planfile_adapter.py  routing.py  scanner_bridge.py  scanner_chat.py  scanner_net.py  (+8 more)
adapters/python/urirun/node/: __init__.py  _artifacts.py  _util.py  _version.py  client.py  config.py  diagnostics.py  doctor.py  episode.py  event_schema.py  flow.py  flow_planner.py  flow_thin.py  flow_verify.py  formatting.py  keyauth.py  manage.py  mesh.py  node_cli.py  paths.py  preconditions.py  recovery.py  reversible.py  routing.py  server.py  skill.py  task_cli.py  transport.py  twin_store.py
adapters/python/urirun/runtime/: __init__.py  _registry.py  _runtime.py  _scan.py  adopt_pack.py  agent.py  cli.py  codegen.py  compat.py  daemon.py  discovery.py  dispatch_protocol.py  errors.py  introspect.py  progress.py  tree.py  v1.py  v2.py  v2_adopt.py  v2_grpc.py  v2_mcp.py  v2_service.py  worker.py
adapters/python/urirun_connectors_toolkit/: __init__.py  connect_catalog.py  connector_contract.py  connector_lint.py  connector_scaffold.py  contract_gate.py  contract_jsonschema.py  contract_reversible.py  resolver.py
adapters/python/urirun_flow/: __init__.py  cli.py  diagnostics.py  flow.py  flow_planner.py  flow_thin.py  flow_verify.py  recovery.py  run.py
adapters/python/urirun_node/: _artifacts.py  _util.py  _version.py  client.py  config.py  doctor.py  formatting.py  keyauth.py  mesh.py  preconditions.py  routing.py  server.py  skill.py  transport.py
adapters/python/urirun_runtime/: __init__.py  _registry.py  _runtime.py  _scan.py  adopt_pack.py  agent.py  cli.py  codegen.py  compat.py  daemon.py  discovery.py  dispatch_protocol.py  errors.py  introspect.py  secrets.py  tree.py  v1.py  v2.py  v2_adopt.py  v2_grpc.py  v2_mcp.py  v2_scan.py  v2_service.py  worker.py
adapters/python/urirun_scanner/: artifacts_admin.py  document_metadata.py  document_sync.py  scanner_bridge.py  scanner_service.py
adapters/python/urirun_twin/: capture_preferences.py  episode.py  experience_retrieval.py  planner.py  reversible.py  twin_store.py
code2llm_output/: README.md  analysis.toon.yaml  context.md
docs/: ACTIVE_REFACTOR_PLAN.md  ARCHITECTURE.md  AUTONOMY_ARCHITECTURE.md  COMPLEXITY_GATE.md  logo.md  (+21 more)
(+305 files in other folders)
