[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun"
version = "0.3.4"
description = "Language-agnostic URI to handler adapter"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "jsonschema>=4.18",
  "pydantic>=2",
]

[project.scripts]
urirun = "urihandler.v8:main"
urirun-v7 = "urihandler.v7:main"
urirun-v8 = "urihandler.v8:main"
urihandler-v7 = "urihandler.v7:main"
urihandler-v8 = "urihandler.v8:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["urihandler*"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
