[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun"
version = "0.4.184"
description = "Language-agnostic URI to handler adapter"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "jsonschema>=4.18",
  "pydantic>=2",
]

[project.optional-dependencies]
grpc = ["grpcio>=1.60"]
planfile = ["planfile>=0.1.103"]
llm = ["litellm>=1.60"]
keyauth = ["cryptography>=41"]  # SSH-key admin auth (uri-copy-id, signed /deploy)
yaml = ["pyyaml>=6"]  # YAML manifests (adopt-pack) + `urirun tree --format yaml`
cdp = ["urirun-cdp>=0.1.0"]  # Chrome DevTools Protocol surface (urirun.connectors.surfaces.cdp shim)
uinput = ["urirun-uinput>=0.1.0"]  # Linux uinput keyboard/mouse surface (urirun.connectors.inputs.uinput shim)
openapi = ["urirun-openapi-import>=0.1.0", "urirun-connectors-toolkit>=0.1.0"]  # OpenAPI→URI import
declarative = ["urirun-declarative>=0.1.0", "urirun-connectors-toolkit>=0.1.0"]  # declarative connector spec
host = ["planfile>=0.1.103", "litellm>=1.60", "qrcode[pil]>=7", "docid>=0.1.9", "cryptography>=41"]
test = ["planfile>=0.1.103", "pytest>=7"]

[project.scripts]
urirun = "urirun.v2:main"
urirun-v1 = "urirun.v1:main"
urirun-v2 = "urirun.v2:main"
uri-copy-id = "urirun.node.mesh:copy_id_cli"

# In-core URI surfaces (trace-first authoring): a promoted known-good run replayable by name,
# and a session recorder. Declared as bindings so skill:// / session:// resolve like any connector.
[project.entry-points."urirun.bindings"]
skill = "urirun.node.skill:skill_bindings"
session = "urirun.node.skill:session_bindings"
ready = "urirun.node.preconditions:ready_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun*"]


[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.ruff.lint.per-file-ignores]
# Deferred imports placed after code break import cycles between the runtime
# modules (introspect↔v2, _runtime↔_registry/_scan); E731 is one local table-
# formatting lambda. These are intentional, not lint debt.
"urirun/runtime/_runtime.py" = ["E402", "E731"]
"urirun/runtime/v2.py" = ["E402"]
